--- a/index.html
+++ b/index.html
@@ -194,6 +194,14 @@
           justify-content: flex-end;
         }
       }
+      @media screen and (max-width: 500px) {
+        body{
+          margin: 0px;
+        }
+        .container_div{
+          margin: 10px;
+        }
+      }
     </style>
   </head>
   <body>
